lustre/osd-ldiskfs/osd_compat.c
@@ -689,7 +689,7 @@ static int osd_obj_update_entry(struct osd_thread_info *info,
 				struct dentry *dir, const char *name,
 				const struct lu_fid *fid,
 				const struct osd_inode_id *id,
-				handle_t *th)
+				handle_t *th, bool locked)
 {
 	struct inode *parent = dir->d_inode;
 	struct dentry *child;
@@ -714,7 +714,8 @@ static int osd_obj_update_entry(struct osd_thread_info *info,
 	child->d_name.len = strlen(name);
 
 	dquot_initialize(parent);
-	inode_lock(parent);
+	if (!locked)
+		inode_lock(parent);
 	bh = osd_ldiskfs_find_entry(parent, &child->d_name, &de, NULL, NULL);
 	if (IS_ERR(bh))
 		GOTO(out, rc = PTR_ERR(bh));
@@ -819,7 +820,8 @@ update:
 out:
 	if (!IS_ERR(bh))
 		brelse(bh);
-	inode_unlock(parent);
+	if (!locked)
+		inode_unlock(parent);
 	return rc;
 }
 
@@ -863,7 +865,7 @@ static int osd_obj_add_entry(struct osd_thread_info *info,
 			     struct osd_device *osd,
 			     struct dentry *dir, char *name,
 			     const struct osd_inode_id *id,
-			     handle_t *th)
+			     handle_t *th, bool locked)
 {
 	struct dentry *child;
 	struct inode *inode;
@@ -902,9 +904,11 @@ static int osd_obj_add_entry(struct osd_thread_info *info,
 		inode->i_ino++;
 
 	dquot_initialize(dir->d_inode);
-	inode_lock(dir->d_inode);
+	if (!locked)
+		inode_lock(dir->d_inode);
 	rc = osd_ldiskfs_add_entry(info, osd, th, child, inode, NULL);
-	inode_unlock(dir->d_inode);
+	if (!locked)
+		inode_unlock(dir->d_inode);
 
 	RETURN(rc);
 }
@@ -1147,9 +1151,10 @@ int osd_obj_map_insert(struct osd_thread_info *info,
 	osd_oid_name(name, sizeof(name), fid, oid);
 
 again:
-	rc = osd_obj_add_entry(info, osd, d, name, id, th);
+	rc = osd_obj_add_entry(info, osd, d, name, id, th, false);
 	if (rc == -EEXIST) {
-		rc = osd_obj_update_entry(info, osd, d, name, fid, id, th);
+		rc = osd_obj_update_entry(info, osd, d, name, fid, id, th,
+					  false);
 		if (unlikely(rc == -ENOENT))
 			goto again;
 
@@ -1216,7 +1221,7 @@ int osd_obj_map_update(struct osd_thread_info *info,
 	LASSERT(d);
 
 	osd_oid_name(name, sizeof(name), fid, ostid_id(ostid));
-	rc = osd_obj_update_entry(info, osd, d, name, fid, id, th);
+	rc = osd_obj_update_entry(info, osd, d, name, fid, id, th, false);
 
 	RETURN(rc);
 }
@@ -1375,7 +1380,7 @@ osd_object_spec_find(struct osd_thread_info *info, struct osd_device *osd,
 
 int osd_obj_spec_update(struct osd_thread_info *info, struct osd_device *osd,
 			const struct lu_fid *fid, const struct osd_inode_id *id,
-			handle_t *th)
+			handle_t *th, bool locked)
 {
 	struct dentry *root;
 	char *name = NULL;
@@ -1385,7 +1390,8 @@ int osd_obj_spec_update(struct osd_thread_info *info, struct osd_device *osd,
 
 	root = osd_object_spec_find(info, osd, fid, &name);
 	if (!IS_ERR(root)) {
-		rc = osd_obj_update_entry(info, osd, root, name, fid, id, th);
+		rc = osd_obj_update_entry(info, osd, root, name, fid, id, th,
+					  locked);
 	} else {
 		rc = PTR_ERR(root);
 		if (rc == -ENOENT)
@@ -1397,7 +1403,7 @@ int osd_obj_spec_update(struct osd_thread_info *info, struct osd_device *osd,
 
 int osd_obj_spec_insert(struct osd_thread_info *info, struct osd_device *osd,
 			const struct lu_fid *fid, const struct osd_inode_id *id,
-			handle_t *th)
+			handle_t *th, bool locked)
 {
 	struct dentry *root;
 	char *name = NULL;
@@ -1407,7 +1413,7 @@ int osd_obj_spec_insert(struct osd_thread_info *info, struct osd_device *osd,
 
 	root = osd_object_spec_find(info, osd, fid, &name);
 	if (!IS_ERR(root)) {
-		rc = osd_obj_add_entry(info, osd, root, name, id, th);
+		rc = osd_obj_add_entry(info, osd, root, name, id, th, locked);
 	} else {
 		rc = PTR_ERR(root);
 		if (rc == -ENOENT)
